@@ -260,6 +260,9 @@ Tools/Demos
 Tests
 -----
 
+- Issue #7110: regrtest now sends test failure reports and single-failure
+  tracebacks to stderr rather than stdout.
+
 - Issue #9628: fix runtests.sh -x option so more than one test can be excluded.
 
 - Issue #9899: Fix test_tkinter.test_font on various platforms.  Patch by
